devops/infra/keycloak/ingress-infra.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-edu-infra
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
    - hosts:
        - edu-auth-internel.deepblueai.com
      secretName: deepblueai-tls
  rules:
    - host: edu-auth-internel.deepblueai.com
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 8080
